# UserResponseCollector

./: .gitignore  README.md  UserQueryCommand.py  UserQueryReceiver.py  UserQueryReceiver.pyproj  UserResponseCollector.py  UserResponseCollector.pyproj  UserResponseCollector.sln  _test_UserResponseCollector.py  main.py  pyproject.toml  test_ConsoleUserQueryReceiver.py  test_UserQueryCommand.py
.github/workflows/: release.yml
Documentation/: Developer_Documentation.txt  README.md
src/UserResponseCollector/: UserQueryCommand.py
src/UserResponseCollector/Documentation/: uml_class_diagram.pptx
